--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -18,8 +18,8 @@ jobs:
       matrix:
         include:
           - { sys: mingw64, env: x86_64 }
-          - { sys: mingw32, env: i686 }
-          - { sys: ucrt64,  env: ucrt-x86_64 }
+          #- { sys: mingw32, env: i686 }
+          #- { sys: ucrt64,  env: ucrt-x86_64 }
           # - { sys: clang64, env: clang-x86_64 } # clang64 is missing several packages, disabled for now
     defaults:
       run:
@@ -56,8 +56,7 @@ jobs:
     - name: meson test
       run: |
         meson test -C ./build
-    - uses: actions/upload-artifact@v3
-      if: failure()
+    - uses: actions/upload-artifact@v4
       with:
         name: ${{matrix.sys}}_Meson_Testlog
         path: build/meson-logs/testlog.txt
