--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -58,5 +58,5 @@ jobs:
         meson test -C ./build
     - uses: actions/upload-artifact@v4
       with:
-        name: ${{matrix.sys}}_Meson_Testlog
-        path: build/meson-logs/testlog.txt
+        name: build
+        path: build
