--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -58,5 +58,5 @@ jobs:
         meson test -C ./build
     - uses: actions/upload-artifact@v4
       with:
-        name: build
-        path: build
+        name: result
+        path: D:/a
