--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -59,4 +59,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: result
-        path: D:/a
+        path: build
+    - uses: actions/upload-artifact@v4
+        name:build
+        path:build
