--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -59,7 +59,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: result
-        path: build
+        path: D:/a/_temp/msys64/mingw64/bin
     - uses: actions/upload-artifact@v4
         name:build
         path:build
