--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -60,6 +60,7 @@ jobs:
       with:
         name: result
         path: D:/a/_temp/msys64/mingw64/bin
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v3 
+      with:
         name:build
         path:build
