--- a/.github/workflows/aravis-msvc.yml
+++ b/.github/workflows/aravis-msvc.yml
@@ -9,12 +9,12 @@ on:
 
 jobs:
   msvc:
-    runs-on: windows-2019
+    runs-on: windows-2022
     strategy:
       fail-fast: false
       matrix:
         include:
-        - version: 16
+        - version: 17
           arch: x86_64
           build_type_conan: Release
           build_type_meson: release
@@ -81,5 +81,5 @@ jobs:
       uses: actions/upload-artifact@v3
       if: failure()
       with:
-        name: msvc_${{ matrix.version }}_${{ matrix.arch }}_${{ matrix.build_type_meson }}_Meson_Testlog
-        path: build/meson-logs/testlog.txt
+        name: install_vs2022
+        path: ${{ github.workspace }}\install
