--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -49,8 +49,7 @@ jobs:
     - name: meson
       run: |
         mkdir build
-        mkdir install
-        meson --prefix=D:/a/Myaravis/Myaravis/install --buildtype=plain -Ddocumentation=disabled -Dgst-plugin=enabled -Dintrospection=enabled -Dusb=enabled -Dviewer=enabled -Dgv-n-buffers=1 -Dgentl-producer=true . ./build
+        meson --buildtype=plain -Ddocumentation=disabled -Dgst-plugin=enabled -Dintrospection=enabled -Dusb=enabled -Dviewer=enabled -Dgv-n-buffers=1 -Dgentl-producer=true . ./build
     - name: ninja install
       run: |
         ninja -C ./build --verbose install
@@ -60,4 +59,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: install_mingw64
-        path: D:/a/Myaravis/Myaravis/install
+        path: build
