--- a/.github/workflows/aravis-mingw.yml
+++ b/.github/workflows/aravis-mingw.yml
@@ -49,14 +49,15 @@ jobs:
     - name: meson
       run: |
         mkdir build
-        meson --buildtype=plain -Ddocumentation=disabled -Dgst-plugin=enabled -Dintrospection=enabled -Dusb=enabled -Dviewer=enabled -Dgv-n-buffers=1 -Dgentl-producer=true . ./build
+        mkdir install
+        meson --prefix=D:/a/Myaravis/Myaravis/install --buildtype=plain -Ddocumentation=disabled -Dgst-plugin=enabled -Dintrospection=enabled -Dusb=enabled -Dviewer=enabled -Dgv-n-buffers=1 -Dgentl-producer=true . ./build
     - name: ninja install
       run: |
         ninja -C ./build --verbose install
-    - name: meson test
-      run: |
-        meson test -C ./build
+    #- name: meson test
+      #run: |
+        #meson test -C ./build
     - uses: actions/upload-artifact@v3
       with:
         name: install_mingw64
-        path: build
+        path: D:/a/Myaravis/Myaravis/install
