--- a/.github/workflows/aravis-msvc.yml
+++ b/.github/workflows/aravis-msvc.yml
@@ -32,24 +32,21 @@ jobs:
         INPUT_CONANFILE: |
           [requires]
           libiconv/1.17
-          gobject-introspection/1.69.0
+          #gobject-introspection/1.69.0
           gstreamer/1.22.3
-          gst-plugins-base/1.22.3      Disable gstreamer for now, latest gst-plugins-base is 1.19.2
-          gtk/4.4.0
+          #gst-plugins-base/1.22.3      Disable gstreamer for now, latest gst-plugins-base is 1.19.2
+          #gtk/4.4.0
           libxml2/2.10.3
           zlib/1.2.13
           libusb/1.0.26
-
           [build_requires]
           meson/0.59.2
           pkgconf/1.9.3
-
           [generators]
           pkg_config
           virtualenv
           virtualbuildenv
           virtualrunenv
-
           [options]
           glib:shared=True
           gstreamer:shared=True
@@ -63,7 +60,7 @@ jobs:
         .\build\activate_build.ps1
         .\build\activate_run.ps1
         echo "::group::configure"
-        meson --prefix ${{ github.workspace }}\install --buildtype ${{ matrix.build_type_meson }} --pkg-config-path ${{ github.workspace }}\build -Ddocumentation=disabled -Dgst-plugin=disabled -Dintrospection=disabled -Dusb=enabled -Dviewer=enabled -Dgv-n-buffers=1 -Dgentl-producer=true . .\build
+        meson --prefix ${{ github.workspace }}\install --buildtype ${{ matrix.build_type_meson }} --pkg-config-path ${{ github.workspace }}\build -Ddocumentation=disabled -Dgst-plugin=disabled -Dintrospection=disabled -Dusb=enabled -Dviewer=disabled -Dgv-n-buffers=1 -Dgentl-producer=true . .\build
         echo "::endgroup::"
         echo "::group::compile"
         meson compile -C .\build -v
@@ -80,5 +77,5 @@ jobs:
     - name: logs
       uses: actions/upload-artifact@v3
       with:
-        name: install_msvc
+        name: install
         path: ${{ github.workspace }}\install
