--- a/.github/workflows/aravis-msvc.yml
+++ b/.github/workflows/aravis-msvc.yml
@@ -16,8 +16,8 @@ jobs:
         include:
         - version: 17
           arch: x86_64
-          build_type_conan: Release
-          build_type_meson: release
+          build_type_conan: Debug
+          build_type_meson: debug
     steps:
     - name: pip
       run: |
